accessed the current weather for Colorado Springs using fetch

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>JavaScript</title>
     <link href="style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.js"></script>
+    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="main.js" defer></script>
   </head>
 
@@ -12,7 +13,10 @@
     <h1>Weather.js</h1>
 
     <div id="main">
-      The current weather conditions are:
+      The current weather conditions for Colorado Springs:
+    </div>
+    <div id="test">
+
     </div>
   </body>
 </html>
